@startuml
title This Diagram shows the relationship between User Space components
package [inc] as C_0000392941554902932752 {
package [UserSpace] as C_0001658485430117366735 {
abstract "Handler" as C_0001327288797420366778
abstract C_0001327288797420366778 {
+~Handler() = default : void
..
{abstract} +handleRequest(const std::string & str) = 0 : bool
{abstract} +setSuccessor(std::shared_ptr<Handler> next) = 0 : void
__
}
class "PasswordLengthHandler" as C_0000926744485612842117
class C_0000926744485612842117 {
+handleRequest(const std::string & str) : bool
+setSuccessor(std::shared_ptr<Handler> next) : void
__
-successor_ : std::shared_ptr<Handler>
}
class "PasswordDigitHandler" as C_0001915182437812341083
class C_0001915182437812341083 {
+handleRequest(const std::string & str) : bool
+setSuccessor(std::shared_ptr<Handler> next) : void
__
-successor_ : std::shared_ptr<Handler>
}
class "PasswordSpecialCharHandler" as C_0001547948083618539243
class C_0001547948083618539243 {
+handleRequest(const std::string & str) : bool
+setSuccessor(std::shared_ptr<Handler> next) : void
__
-successor_ : std::shared_ptr<Handler>
}
abstract "Request" as C_0000544298380591634722
abstract C_0000544298380591634722 {
{abstract} +handleRequest() = 0 : bool
__
}
class "RequestFactory" as C_0000765520116889686140
class C_0000765520116889686140 {
{static} +createRequest(RequestType type, std::map<std::string,std::string> & users) : std::shared_ptr<Request>
__
}
enum "RequestFactory::RequestType" as C_0000488195957427833052
enum C_0000488195957427833052 {
CREATE_PASSWORD
VERIFY_PASSWORD
}
class "PasswordCreationRequest" as C_0001202719384412558224
class C_0001202719384412558224 {
+PasswordCreationRequest(std::map<std::string,std::string> & users) : void
..
+handleRequest() : bool
__
-handlers_ : std::vector<std::shared_ptr<Handler>>
-users_ : std::map<std::string,std::string> &
}
class "PasswordVerificationRequest" as C_0000581188225568213607
class C_0000581188225568213607 {
+PasswordVerificationRequest(std::map<std::string,std::string> & users) : void
..
+handleRequest() : bool
__
-users_ : std::map<std::string,std::string> &
}
class "UserManager" as C_0001492504959217204985
class C_0001492504959217204985 {
+UserManager() : void
..
+createUser() : bool
+isUsersEmpty() : bool
-loadUsers() : void
-saveUsers() : void
+verifyUser() : bool
__
-createRequest : std::shared_ptr<Request>
-filesManager_ : FilesManager
-users_ : std::map<std::string,std::string>
-verifyRequest : std::shared_ptr<Request>
}
}
}
C_0000926744485612842117 --> C_0001327288797420366778 : -successor_
C_0001327288797420366778 <|-- C_0000926744485612842117
C_0001915182437812341083 --> C_0001327288797420366778 : -successor_
C_0001327288797420366778 <|-- C_0001915182437812341083
C_0001547948083618539243 --> C_0001327288797420366778 : -successor_
C_0001327288797420366778 <|-- C_0001547948083618539243
C_0000765520116889686140 ..> C_0000544298380591634722
C_0000488195957427833052 --+ C_0000765520116889686140
C_0001202719384412558224 o-- C_0001327288797420366778 : -handlers_
C_0000544298380591634722 <|-- C_0001202719384412558224
C_0000544298380591634722 <|-- C_0000581188225568213607
C_0001492504959217204985 --> C_0000544298380591634722 : -createRequest
C_0001492504959217204985 --> C_0000544298380591634722 : -verifyRequest

'Generated with clang-uml, version 0.5.2
'LLVM version clang version 18.1.1 (https://github.com/llvm/llvm-project.git dba2a75e9c7ef81fe84774ba5eee5e67e01d801a)
@enduml
